<resources>
    <string name="app_name">LoiGiaiHayKt</string>
    <string name="txt_open">Open</string>
    <string name="txt_close">Close</string>

    <!--String for button-->
    <string name="txt_save_offline">Tải Offline</string>
    <string name="txt_share">Chia sẻ</string>
    <string name="txt_comment">Bình luận</string>
    <string name="txt_feedback">Phản hồi</string>
    <string name="txt_next_lesson">Bài tiếp theo</string>
    <string name="txt_other_cat">Các bài viết liên quan</string>

    <!--String for message -->
    <string name="txt_network">Kiểm tra kết nối mạng</string>
    <string name="txt_downloading">Đang tải và giải nén</string>
    <string name="txt_download_success">Tải bài học thành công</string>
    <string name="txt_delete">Xóa</string>
    <string name="txt_save_success">Lưu bài học thành công</string>
    <string name="txt_save_error">Lưu bài học thất bại</string>
    <string name="txt_title_save_offline">Các bài đã tải offline</string>
    <string name="txt_message_dialog">Bạn chắc chắn muốn xóa bài học này</string>
    <string name="txt_downloaded">Đã tải</string>
    <string name="txt_title_saved">Xem bài viết đã lưu</string>
    <string name="txt_message_delete_all">Bạn có muốn xóa tất cả bài đã lưu</string>
    <string name="txt_title_history">Bài viết đã xem</string>
    <string name="txt_message_dialog_history">Bạn có muốn xóa các bài đã xem</string>
    <string name="txt_message_delete_history_success">Xóa các bài đã xem thành công</string>
    <string name="txt_message_delete_history_error">Xóa các bài đã xem thất bại</string>
    <string name="txt_title_dialog_feedback">Báo lỗi-góp ý</string>
    <string name="txt_feedback_question">Vấn đề bạn gặp phải là gì?</string>
    <string name="txt_saichinhta">Sai chính tả</string>
    <string name="txt_giaikhohieu">Giải khó hiểu</string>
    <string name="txt_giaisai">Giải sai</string>
    <string name="txt_other_error">Lỗi khác</string>
    <string name="txt_title_detail_feedback">Cho biết chi tiết góp ý của bạn</string>
    <string name="txt_hint_detail_feedback">Nhập góp ý</string>
    <string name="txt_see_more">Xem thêm</string>
    <string name="txt_search">Tìm kiếm</string>
    <string name="txt_search_result">Kết quả tìm kiếm của từ khóa <font fgcolor='#FF4CD964'>&#34;%s&#34;</font> trong <font fgcolor='#FF4CD964'>%s</font></string>
</resources>
